# rust_learn

./: .gitignore
my-api/: Cargo.toml  README.md  docker-compose.yml
my-api/migrations/: 20260408152821_create_users_table.sql
my-api/src/: main.rs
my-api/src/db/: mod.rs
my-api/src/handlers/: user.rs
my-api/src/models/: user.rs
my-api/src/routes/: mod.rs
